# nerian_stereo

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: NerianStereo.cfg  generate_nerian_config_cpp.py
launch/: nerian_stereo.launch  nerian_stereo_nodelet.launch
msg/: StereoCameraInfo.msg
scripts/: camera_info_splitter.py  config_device_passthru.sh  config_device_rectify.sh  config_device_stereo.sh  run_nerian_stereo.sh
src/: nerian_stereo_node.cpp  nerian_stereo_node.h  nerian_stereo_node_base.cpp  nerian_stereo_node_base.h  nerian_stereo_node_main.cpp  nerian_stereo_nodelet.cpp  nerian_stereo_nodelet.h
