<?xml version="1.0"?>
<package format="3">
  <name>nerian_stereo</name>
  <version>2.1.0</version>
  <description>Driver node for SceneScan and SP1 stereo vision sensors by Nerian Vision Technologies</description>
  <maintainer email="konstantin.schauwecker@nerian.com">Konstantin Schauwecker</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/nerian_stereo</url>
  <author email="service@nerian.com">Nerian Vision Technologies</author>
  
  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend> 
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rmw_implementation</depend>
  
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <doc_depend>doxygen</doc_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
